# sched2

./: Makefile  README.md  pyproject.toml  sched2.py  test_sched2.py
.github/workflows/: docs.yml
sched2/: __init__.py
tests/: test_sched2.py
