[tool.poetry]
name = "sched2"
version = "0.7.0"
description = "Event scheduler 2"
authors = ["Pedro Rodrigues <me@pdbr.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://medecau.github.io/sched2/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pdoc = "^12.3.0"
isort = "^5.11.4"
black = "^22.12.0"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
