[project]
name = "sched2"
version = "0.8.2"
description = "Event scheduler 2"
readme = "README.md"
requires-python = "<4.0,>=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pedro Rodrigues", email = "me@pdbr.org"},
]

[project.urls]
homepage = "https://medecau.github.io/sched2/"

[dependency-groups]
dev = [
    "pdoc<13.0.0,>=12.3.0",
    "pytest<9.0.0,>=8.0.2",
    "pytest-mock<4.0.0,>=3.12.0",
]

[tool.ruff.lint]
extend-select =[
    "I",  # imports
    "ERA001",  # dead code
    "T100",  # debugger
]
